@@ -1,2 +1,5 @@
 README for geodsea
 ==========================
+
+
+MAVEN_OPTS=-Xmx1024m -XX:MaxPermSize=128M -Djava.security.egd=file:/dev/./urandom
